[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hierarchical_loss"
version = "0.1.0"
description = "a pytorch library for computing loss over hierarchical categorical output"
authors = [
  { name = "CScott Brown" },
]
dependencies = [
  "torch",
  "numpy",
  "matplotlib",
  "treelib",
  "opencv-python",
  "requests"
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "jupyter"
]
